--- a/logger.conf
+++ b/logger.conf
@@ -9,7 +9,8 @@ keys=myFormatter
  
 [logger_root]
 level=CRITICAL
-handlers=consoleHandler
+handlers=
+#handlers=consoleHandler
  
 [logger_rkn-worker]
 level=INFO
