--- a/logger.conf
+++ b/logger.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,rkn-worker,class.rkn,class.mysqlconnect,class.rkn.checker,class.dump
+keys=root,rkn-worker,class.rkn,class.mysqlconnect,class.rkn.checker,class.dump,class.daemon
  
 [handlers]
 keys=fileHandler, consoleHandler
@@ -21,6 +21,11 @@ qualname=rkn-worker
 level=INFO
 handlers=fileHandler
 qualname=class.rkn
+
+[logger_class.daemon]
+level=INFO
+handlers=fileHandler
+qualname=class.daemon
 
 [logger_class.mysqlconnect]
 level=INFO
